image and text aligned, highlight fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@ body{
     font-family:'Montserrat', sans-serif;
     font-weight:300;
     color: antiquewhite;
+    justify-content: center;
     text-align: center;}
 
  
@@ -15,6 +16,10 @@ body{
     z-index: 9;
     padding-top: 150px;
     padding-bottom: 50px;
+}
+p{
+    padding-left: 332px;
+    padding-right: 332px;
 }
 
 
@@ -32,14 +37,9 @@ h1{
 	position: sticky;
 	top: 0;
 }
-h2 {
-    padding: 0 5px
-    letter-spacing: 2px;
-    background: linear-gradient(
-        to bottom,
-        transparent 50%,
-        #fce041 50%
-    );
+
+.highlight{
+    background: linear-gradient(180deg,rgba(255,255,255,0) 60%, #f99750 60%);
 }
 
 
@@ -94,15 +94,7 @@ img {
 
 }
 
-.container {
-    image {
-      width: 250px;
-      float: left;
-    }
-    &__text {
-      display: inline;
-    }
-}
+
 
 .bItem {
     display: flex;
